<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ConsumerApp</string>
    <string name="main_activity_label">List User</string>
    <string name="search_activity_label">Search User</string>
    <string name="detail_activity_label">Detail User</string>
    <string name="setting_activity_label">Settings</string>
    <string name="reminder_set">Set Reminder</string>

    <string name="search_hint">Search Github User</string>
    <string name="github_user">Github users</string>

    <string name="user_name_detail">%s\n(%s)</string>
    <string name="user_name_only_detail">%s</string>
    <string name="detail_username_name">Username\n(Name)</string>
    <string name="company_col">Company</string>
    <string name="location_col">Location</string>
    <string name="blog_col">Blog</string>
    <string name="repo_col">Repo/Gist</string>
    <string name="following_col">Following</string>
    <string name="followers_col">Follower</string>

    <string name="tab_1_title">Follower</string>
    <string name="tab_2_title">Following</string>
    <string name="follower_fav_list_col">follower :</string>
    <string name="following_fav_list_col">following :</string>
    <string name="success_store_user">Success to favorite</string>
    <string name="success_delete_user">Success to unfavorite</string>
    <string name="fail_change_db">Fail to update data</string>
    <string name="no_data_saved">No Data Recorded Right Now</string>

    <string name="change_language_settings">Change Language Settings</string>

    <string name="one_time_alarm">One Time Alarm</string>
    <string name="alarm_date">Date Alarm</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="alarm_message">Message Alarm</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="cancel_alarm">Canceling Alarm</string>
    <string name="alarm_time">Time Alarm</string>

    <string name="notif_content_title">Consumer App</string>
    <string name="notif_content_text">Let\'s find user popular star on Github</string>
    <string name="notif_subtext">reminder</string>

    <string name="alarm_one_time_toast">One time alarm set up</string>
    <string name="alarm_repeat_toast">Repeating alarm set up</string>
    <string name="alarm_cancel_one_time_toast">One Time Alarm canceled</string>
    <string name="alarm_cancel_repeat_toast">Repeating Alarm canceled</string>

    <string name="change_language">Change The Language</string>
    <string name="auto_reminder">Auto Reminder at %s %s</string>
    <string name="set_reminder">Set Reminder Manually</string>
</resources>
